<?xml version="1.0"?>
<package format="2">
  <name>relative_positional_controller</name>
  <version>1.0.1</version>
  <description>Action server for moving the robot with relative positional commands</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
