<?xml version="1.0"?>
<package format="3">
  <name>cras_relative_positional_controller</name>
  <version>2.0.0</version>
  <description>Action server for moving the robot with relative positional commands</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <url type="website">https://wiki.ros.org/cras_relative_positional_controller</url>
  <url type="repository">https://github.com/ctu-vras/cras_relative_positional_controller</url>
  <url type="bugtracker">https://github.com/ctu-vras/cras_relative_positional_controller/issues</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>

</package>
